crates/icydb-core/tests/ui/db/vec_value_is_runtime_only_not_slot_codec.rs
use icydb_core::{traits::PersistedFieldSlotCodec, value::Value};

fn assert_slot_codec<T: PersistedFieldSlotCodec>() {}

fn main() {
    assert_slot_codec::<Vec<Value>>();
}
